# horizon-textrpg-old

./: .gitignore  README.md  configure.ac
include/hrpg/: machine.h  player.h  potion.h  rand.h  weapon.h
src/: .machine.c.swo  .potions.c.swp  Makefile.am  machine.c  main.c  player.c  potion.c  rand.c  weapon.c
